--- a/Check WD kulturpersoner uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner uppsalakyrkogardar.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-15 09:03:40.085903\n"
+      "Last run:  2020-10-15 09:15:03.064648\n"
      ]
     }
    ],
@@ -177,56 +177,17 @@
        "      <td>Sonja Lyttkens</td>\n",
        "      <td>sonja-lyttkens</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>Uno von Troil</td>\n",
-       "      <td>uno-von-troil</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>Viktor Persson</td>\n",
-       "      <td>viktor-persson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>Vivi Täckholm</td>\n",
-       "      <td>vivi-tackholm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Yngve Svalander</td>\n",
-       "      <td>yngve-svalander</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>Åke Holm</td>\n",
-       "      <td>ake-holm</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>128 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         kulturgravname                href\n",
-       "0       Alfred Dahlgren     alfred-dahlgren\n",
-       "1    Rosalie Olivecrona  rosalie-olivecrona\n",
-       "2          Hans Rosling        hans-rosling\n",
-       "3         Emma Schenson       emma-schenson\n",
-       "4        Sonja Lyttkens      sonja-lyttkens\n",
-       "..                  ...                 ...\n",
-       "123       Uno von Troil       uno-von-troil\n",
-       "124      Viktor Persson      viktor-persson\n",
-       "125       Vivi Täckholm       vivi-tackholm\n",
-       "126     Yngve Svalander     yngve-svalander\n",
-       "127            Åke Holm            ake-holm\n",
-       "\n",
-       "[128 rows x 2 columns]"
+       "       kulturgravname                href\n",
+       "0     Alfred Dahlgren     alfred-dahlgren\n",
+       "1  Rosalie Olivecrona  rosalie-olivecrona\n",
+       "2        Hans Rosling        hans-rosling\n",
+       "3       Emma Schenson       emma-schenson\n",
+       "4      Sonja Lyttkens      sonja-lyttkens"
       ]
      },
      "execution_count": 4,
@@ -235,14 +196,15 @@
     }
    ],
    "source": [
-    "Kulturgravar"
+    "Kulturgravar.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wikidata "
+    "## Wikidata  \n",
+    "check graves with ref kulturpersoner https://w.wiki/crt"
    ]
   },
   {
@@ -304,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -342,101 +304,101 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>WD</th>\n",
        "      <th>personLabel</th>\n",
        "      <th>kulturperson</th>\n",
+       "      <th>WD</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>106</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
        "      <td>Rutger Sernander</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/rutger-sernander'>rutger-sernander</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>107</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
        "      <td>Sixtus Janson</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>108</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
        "      <td>Sonja Lyttkens</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
        "      <td>Svante Arrhenius</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
        "      <td>Sven Anders Hägg</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>111</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
        "      <td>Sven Lilja</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
        "      <td>Thekla Knös</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
        "      <td>Topper Martyn</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
        "      <td>Tycho Hedén</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
        "      <td>Ulla-Bella Fridh</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
        "      <td>Uno von Troil</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
        "      <td>Viktor Persson</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
        "      <td>Vivi Laurent-Täckholm</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
        "      <td>Yngve Svalander</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
        "      <td>Åke Holm</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ake-holm'>ake-holm</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -445,7 +407,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +459,7 @@
        "Name: Kulturgravar_Wikidata, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +470,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -537,6 +508,8 @@
        "      <th>personLabel</th>\n",
        "      <th>refURL</th>\n",
        "      <th>href</th>\n",
+       "      <th>WD</th>\n",
+       "      <th>kulturperson</th>\n",
        "      <th>kulturgravname</th>\n",
        "      <th>Kulturgravar_Wikidata</th>\n",
        "    </tr>\n",
@@ -548,11 +521,11 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [person, qid, personLabel, refURL, href, kulturgravname, Kulturgravar_Wikidata]\n",
+       "Columns: [person, qid, personLabel, refURL, href, WD, kulturperson, kulturgravname, Kulturgravar_Wikidata]\n",
        "Index: []"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +546,7 @@
        "Series([], Name: refURL, dtype: object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +575,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 0 entries\n",
-      "Data columns (total 7 columns):\n",
+      "Data columns (total 9 columns):\n",
       " #   Column                 Non-Null Count  Dtype \n",
       "---  ------                 --------------  ----- \n",
       " 0   person                 0 non-null      object\n",
@@ -610,9 +583,11 @@
       " 2   personLabel            0 non-null      object\n",
       " 3   refURL                 0 non-null      object\n",
       " 4   href                   0 non-null      object\n",
-      " 5   kulturgravname         0 non-null      object\n",
-      " 6   Kulturgravar_Wikidata  0 non-null      object\n",
-      "dtypes: object(7)\n",
+      " 5   WD                     0 non-null      object\n",
+      " 6   kulturperson           0 non-null      object\n",
+      " 7   kulturgravname         0 non-null      object\n",
+      " 8   Kulturgravar_Wikidata  0 non-null      object\n",
+      "dtypes: object(9)\n",
       "memory usage: 0.0+ bytes\n"
      ]
     }
@@ -623,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +637,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,15 +653,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-15 09:03:44.735021\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:04.649589\n"
+      "Ended:  2020-10-15 09:15:06.694843\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:03.630789\n"
      ]
     }
    ],
