Update Check WD kulturpersoner uppsalakyrkogardar.ipynb

--- a/Check WD kulturpersoner uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner uppsalakyrkogardar.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Webscrape kulturpersoner uppsalakyrkogardar\n",
-    "version 0.3\n",
+    "version 0.4\n",
     "\n",
     "checks uppsalakyrkogardar and compare with Wikidata. \n",
     "\n",
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-15 09:15:03.064648\n"
+      "Last run:  2020-10-15 09:16:01.518777\n"
      ]
     }
    ],
@@ -304,100 +304,100 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>personLabel</th>\n",
        "      <th>kulturperson</th>\n",
+       "      <th>personLabel</th>\n",
        "      <th>WD</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>106</th>\n",
-       "      <td>Rutger Sernander</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/rutger-sernander'>rutger-sernander</a></td>\n",
+       "      <td>Rutger Sernander</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>107</th>\n",
-       "      <td>Sixtus Janson</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
+       "      <td>Sixtus Janson</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>108</th>\n",
-       "      <td>Sonja Lyttkens</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
+       "      <td>Sonja Lyttkens</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
-       "      <td>Svante Arrhenius</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
+       "      <td>Svante Arrhenius</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
-       "      <td>Sven Anders Hägg</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
+       "      <td>Sven Anders Hägg</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>111</th>\n",
-       "      <td>Sven Lilja</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
+       "      <td>Sven Lilja</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
-       "      <td>Thekla Knös</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
+       "      <td>Thekla Knös</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
-       "      <td>Topper Martyn</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
+       "      <td>Topper Martyn</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
-       "      <td>Tycho Hedén</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
+       "      <td>Tycho Hedén</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
-       "      <td>Ulla-Bella Fridh</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
+       "      <td>Ulla-Bella Fridh</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
-       "      <td>Uno von Troil</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
+       "      <td>Uno von Troil</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
-       "      <td>Viktor Persson</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
+       "      <td>Viktor Persson</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
-       "      <td>Vivi Laurent-Täckholm</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
+       "      <td>Vivi Laurent-Täckholm</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td>Yngve Svalander</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
+       "      <td>Yngve Svalander</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
-       "      <td>Åke Holm</td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ake-holm'>ake-holm</a></td>\n",
+       "      <td>Åke Holm</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -469,12 +469,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###"
+    "### Any diff Wikidata <-> Kulturgravar"
    ]
   },
   {
@@ -660,8 +658,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-15 09:15:06.694843\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:03.630789\n"
+      "Ended:  2020-10-15 09:16:05.764464\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:04.245972\n"
      ]
     }
    ],
