--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -1689,7 +1689,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#List new SKBL articles not in Wikidata\n",
+    "mergeSKBLWD_WDOnly = mergeSKBLWD[mergeSKBLWD[\"WD_SKBL\"] == \"SKBL_only\"].copy() \n",
+    "mergeSKBLWD_WDOnly[\"linkjson\"] = \"<a href='https://www.skbl.se/sv/artikel/\" + mergeSKBLWD_WDOnly[\"skblid\"].astype(str) + \".json'>json</a>\"\n",
+    "mergeSKBLWD_WDOnly[\"linkhtml\"] = \"<a href='https://www.skbl.se/sv/artikel/\" + mergeSKBLWD_WDOnly[\"skblid\"].astype(str) + \"'>html</a>\"\n",
+    "\n",
+    "pd.set_option(\"display.max.columns\", None) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New SKBL record\n",
+    "missing in Wikidata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1722,18 +1744,12 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#List new SKBL articles not in Wikidata\n",
-    "mergeSKBLWD_WDOnly = mergeSKBLWD[mergeSKBLWD[\"WD_SKBL\"] == \"SKBL_only\"].copy() \n",
-    "mergeSKBLWD_WDOnly[\"linkjson\"] = \"<a href='https://www.skbl.se/sv/artikel/\" + mergeSKBLWD_WDOnly[\"skblid\"].astype(str) + \".json'>json</a>\"\n",
-    "mergeSKBLWD_WDOnly[\"linkhtml\"] = \"<a href='https://www.skbl.se/sv/artikel/\" + mergeSKBLWD_WDOnly[\"skblid\"].astype(str) + \"'>html</a>\"\n",
-    "\n",
-    "pd.set_option(\"display.max.columns\", None) \n",
     "HTML(mergeSKBLWD_WDOnly[{'WikidataID','skblid','publishedDate','linkjson','linkhtml'}].tail(15).to_html(escape=False))"
    ]
   },
