--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -71,17 +71,7 @@
     "LitteraturbankenTotShow = LitteraturbankenTot[LitteraturbankenTot[\"show\"]==True]   \n",
     "\n",
     "### 2) copyright on metadata?\n",
-    "Should be ok see \n",
-    "We need CC0 to import data in Wikidata (see [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)) e.g. if we should add all books as objects in Wikidata with no text and create links to Litteraturbanken then fields like below need to be [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/)  \n",
-    "* Författare\n",
-    "* Verk\n",
-    "* Libris-id \n",
-    "* förlaga\t\n",
-    "* eid\t\n",
-    "* Införd\t\n",
-    "* Länk i klartext\t\n",
-    "* Epub\t\n",
-    "* Källa"
+    "Should be ok see [JSON for a record 23 comment 707542448](https://github.com/spraakbanken/littb-frontend/issues/23#issuecomment-707542448)\n"
    ]
   },
   {
