--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Litteraturbanken Author \n",
-    "version 1.18 -  added link json \n",
+    "version 1.19 -  added link json \n",
     "\n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
     "* Wikidata tool for matching non matched authors [catalog/1223](https://mix-n-match.toolforge.org/#/catalog/1223)\n",
@@ -71,7 +71,11 @@
     "LitteraturbankenTotShow = LitteraturbankenTot[LitteraturbankenTot[\"show\"]==True]   \n",
     "\n",
     "### 2) copyright on metadata?\n",
-    "Should be ok see [JSON for a record 23 comment 707542448](https://github.com/spraakbanken/littb-frontend/issues/23#issuecomment-707542448)\n"
+    "Should be ok see [JSON for a record 23 comment 707542448](https://github.com/spraakbanken/littb-frontend/issues/23#issuecomment-707542448)\n",
+    "\n",
+    "### 3) Persistent indentifiers for Litteraturbanken\n",
+    "Example what Litteraturbanken plans to do see [Facebook](https://www.facebook.com/Litteraturbanken.se/videos/261954861599359)\n",
+    "* suggestion that they use Public identifiers see [question https24#issuecomment-711140342] (https://github.com/spraakbanken/littb-frontend/issues/24#issuecomment-711140342)"
    ]
   },
   {
