Update Diarie Linköpings kommun.ipynb

--- a/Diarie Linköpings kommun.ipynb
+++ b/Diarie Linköpings kommun.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Diarie Linköpings kommun\n",
-    "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Diarie%20Link%C3%B6pings%20kommun%20Riksdagen.ipynb)\n",
+    "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Diarie%20Link%C3%B6pings%20kommun.ipynb)\n",
     "\n",
     "* om [ärenden Linköping](https://www.linkoping.se/open/data/arende/)\n",
     "\n",
