Update Diarie Linköpings kommun.ipynb

--- a/Diarie Linköpings kommun.ipynb
+++ b/Diarie Linköpings kommun.ipynb
@@ -483,6 +483,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.map_locations\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'dict'"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: 'pandas._libs.index.IndexEngine._call_map_locations'\n",
+      "Traceback (most recent call last):\n",
+      "  File \"pandas/_libs/hashtable_class_helper.pxi\", line 1709, in pandas._libs.hashtable.PyObjectHashTable.map_locations\n",
+      "TypeError: unhashable type: 'dict'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '', 'organization': None}                                             245\n",
+       "{'name': '', 'organization': 'Kommunledningsförvaltningen'}                     11\n",
+       "{'name': '', 'organization': ''}                                                 9\n",
+       "{'name': '', 'organization': 'Länsstyrelsen Östergötland'}                       9\n",
+       "{'name': '', 'organization': 'Länsstyrelsen i Östergötland'}                     8\n",
+       "{'name': '', 'organization': 'mos/mex'}                                          7\n",
+       "{'name': '', 'organization': 'Samverkan Östergötland'}                           5\n",
+       "{'name': '', 'organization': 'Lönecenter'}                                       4\n",
+       "{'name': '', 'organization': 'Tekniska verken i Linköping AB'}                   4\n",
+       "{'name': '', 'organization': 'Samhällsbyggnadsnämnden'}                          4\n",
+       "{'name': '', 'organization': 'Bygg- och miljönämnden'}                           3\n",
+       "{'name': '', 'organization': 'Trafikverket'}                                     3\n",
+       "{'name': '', 'organization': 'Omsorg o äldrenämnd'}                              2\n",
+       "{'name': '', 'organization': 'Grafiska museet i Gamla Linköping'}                2\n",
+       "{'name': '', 'organization': 'Sweco Environment AB'}                             2\n",
+       "{'name': '', 'organization': 'Överförmyndarenheten'}                             2\n",
+       "{'name': '', 'organization': 'Barn- och ungdomsnämnden'}                         2\n",
+       "{'name': '', 'organization': 'Förvaltningsrätten i Linköping'}                   2\n",
+       "{'name': '', 'organization': 'Landerydskliniken'}                                2\n",
+       "{'name': '', 'organization': 'Arbetsmarknadsnämnden'}                            2\n",
+       "{'name': '', 'organization': 'Tekniska Verken i Linköping AB'}                   2\n",
+       "{'name': '', 'organization': 'Vinnova'}                                          2\n",
+       "{'name': '', 'organization': 'Länsstyrelsen'}                                    2\n",
+       "{'name': '', 'organization': 'Lerboga Ekbackens Samfällighetsförening'}          2\n",
+       "{'name': '', 'organization': 'Helsingborgs stad'}                                1\n",
+       "{'name': '', 'organization': 'Euler Hermes Sverige filial'}                      1\n",
+       "{'name': '', 'organization': 'Åklagarmyndigheten'}                               1\n",
+       "{'name': '', 'organization': 'Kultur- och fritidskontoret'}                      1\n",
+       "{'name': '', 'organization': 'Tyréns AB'}                                        1\n",
+       "{'name': '', 'organization': 'Centrumförvaltning AB'}                            1\n",
+       "{'name': '', 'organization': 'Polismyndigheten'}                                 1\n",
+       "{'name': '', 'organization': 'Fackförbund och arbetsgivare'}                     1\n",
+       "{'name': '', 'organization': 'Försvarsmakten'}                                   1\n",
+       "{'name': '', 'organization': 'Stångåstaden'}                                     1\n",
+       "{'name': '', 'organization': 'AB Göta kanalbolag'}                               1\n",
+       "{'name': '', 'organization': 'Lönecenter '}                                      1\n",
+       "{'name': '', 'organization': 'Länsstyrelsen i Stockholm & Sametinget'}           1\n",
+       "{'name': '', 'organization': 'Tekniska verken'}                                  1\n",
+       "{'name': '', 'organization': 'KFUM Linköping'}                                   1\n",
+       "{'name': '', 'organization': 'Ekonomidirektör'}                                  1\n",
+       "{'name': '', 'organization': 'Sweco Society AB'}                                 1\n",
+       "{'name': '', 'organization': 'Bygg- och miljönämnden, Lkpg kommun'}              1\n",
+       "{'name': '', 'organization': 'Miljö- och samhällsbyggnadsförvaltningen'}         1\n",
+       "{'name': '', 'organization': 'Ledbergs hembygdsförening'}                        1\n",
+       "{'name': '', 'organization': 'Myndigheten för samhällsskydd och beredskap'}      1\n",
+       "{'name': '', 'organization': 'Kommunens revisorer'}                              1\n",
+       "{'name': '', 'organization': 'RTOG'}                                             1\n",
+       "{'name': '', 'organization': 'Utsikt Bredband AB'}                               1\n",
+       "{'name': '', 'organization': '8220023009'}                                       1\n",
+       "{'name': '', 'organization': 'Förvaltningsrådet Linköpings skyttecentrum'}       1\n",
+       "{'name': '', 'organization': 'Lejonfastigheter AB'}                              1\n",
+       "{'name': '', 'organization': 'Mark- och miljödomstolen Växjö Tingsrätt'}         1\n",
+       "{'name': '', 'organization': 'Länsstyrelsen i Stockholm och Sametinget'}         1\n",
+       "{'name': '', 'organization': 'Lantmäterimyndigheten'}                            1\n",
+       "{'name': '', 'organization': 'White Arkitekter AB'}                              1\n",
+       "{'name': '', 'organization': 'Ramböll Sverige AB'}                               1\n",
+       "{'name': '', 'organization': 'Boxholms Kommun'}                                  1\n",
+       "{'name': '', 'organization': 'Uppsala universitet'}                              1\n",
+       "{'name': '', 'organization': 'Svefa AB'}                                         1\n",
+       "{'name': '', 'organization': 'WSP Sverige AB'}                                   1\n",
+       "{'name': '', 'organization': 'Structor Miljö Öst AB'}                            1\n",
+       "{'name': '', 'organization': 'Leanlink'}                                         1\n",
+       "{'name': '', 'organization': 'Bildningsnämnden'}                                 1\n",
+       "{'name': '', 'organization': 'Regeringskansliet'}                                1\n",
+       "{'name': '', 'organization': 'Hyres- och Arrendenämnden i Linköping'}            1\n",
+       "{'name': '', 'organization': 'Växjö Tingsrätt, Mark och miljödomstolen'}         1\n",
+       "Name: senderOrReceiver, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_rows', None) \n",
+    "dfEvent[\"senderOrReceiver\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
