--- a/ESV Regleringsbrev.ipynb
+++ b/ESV Regleringsbrev.ipynb
@@ -576,7 +576,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame"
+   ]
   }
  ],
  "metadata": {
